plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/publishedLibrarySources/expectActualInStdlibSources/kotlin-test/src/jsMain/kotlin/kotlin-test.js.kt
package kotlin.test

@Target(AnnotationTarget.FUNCTION)
public actual annotation class <!LINE_MARKER("descr='Has expects in common module'")!>Test<!>

internal actual inline fun <!LINE_MARKER("descr='Has expects in common module'")!>AssertionErrorWithCause<!>(message: String?, cause: Throwable?): AssertionError =
    AssertionError(message, cause)
